Fix footer covering tournaments

--- a/src/css/pages/ViewTournaments.css
+++ b/src/css/pages/ViewTournaments.css
@@ -9,3 +9,7 @@
 .header-text {
     color: black;
 }
+
+.margin-bottom {
+    margin-bottom: 10%;
+}
